Fix legend style on mobile

--- a/frontend/src/map/legend/legend-content.scss
+++ b/frontend/src/map/legend/legend-content.scss
@@ -22,7 +22,8 @@
 		margin: 10px -8px;
 	}
 	
-	dl {
+	&#{&}#{&} dl {
+		display: block; // Override display: grid from search-box styles
 		margin-bottom: 0px;
 	}
 	
